# violet

./: .gitignore  CMakeLists.txt  LICENSE.txt  ReadMe_jp.md  build.cmake
cmake/: compile_option.cmake  version.cmake  version.h.in
test/: AddTestHelpers.cmake  CMakeLists.txt  stringTest.cpp
test/util/: comparable.cpp
violet/: string.hpp
violet/util/: comparable.hpp  util.hpp
